plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
}


android {
    namespace 'apple.teja.mycollegenotes'
    compileSdk 33



    defaultConfig {
        applicationId "apple.teja.mycollegenotes"
        minSdk 21
        targetSdk 33
        versionCode 24
        versionName "1.15.B8"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'

            signingConfig signingConfigs.debug

        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    buildFeatures {
        viewBinding true
    }

    tasks.withType(JavaExec) {
        jvmArgs += ['--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED']
    }

}



dependencies {

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.9.0-alpha01'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.google.firebase:firebase-auth:21.1.0'
    implementation 'com.google.firebase:firebase-firestore:24.4.3'
    implementation 'com.google.firebase:firebase-storage:20.1.0'
    implementation 'com.google.firebase:firebase-messaging:23.1.1'
    implementation 'androidx.annotation:annotation:1.5.0'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
    implementation 'com.google.android.gms:play-services-auth:20.4.1'
    implementation 'com.google.firebase:firebase-perf:20.3.1'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    implementation 'com.github.TutorialsAndroid:GButton:v1.0.19'

    implementation'androidx.navigation:navigation-fragment:2.5.3'
    implementation 'com.google.android.material:material:1.9.0-alpha01'
    implementation 'androidx.navigation:navigation-ui:2.5.3'
    implementation 'com.github.smarteist:autoimageslider:1.3.9'
    implementation "com.github.bumptech.glide:glide:4.14.2"
    implementation platform('com.google.firebase:firebase-bom:31.2.1')
    implementation 'com.google.firebase:firebase-analytics:21.2.0'
    implementation('de.hdodenhof:circleimageview:3.1.0')
    implementation 'com.google.android.exoplayer:exoplayer:2.18.2'
    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'com.github.bumptech.glide:glide:4.14.2'
    implementation 'com.google.firebase:firebase-database:20.1.0'
    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'

    implementation 'com.github.MikeOrtiz:TouchImageView:1.4.1'

    implementation 'com.balysv:material-ripple:1.0.2'
    implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
    implementation ("com.google.firebase:firebase-analytics-ktx:21.2.0") {
        exclude module: "play-services-ads-identifier"
        exclude module: "play-services-measurement"
        exclude module: "play-services-measurement-sdk"
        exclude module: "play-services-measurement-api"
    }

    implementation 'com.google.android.gms:play-services-ads:21.5.0'


    configurations.all {
        exclude group: 'com.google.android.gms', module: 'play-services-safetynet'
    }

    implementation fileTree(dir : 'libs', include : [ '*.jar' ])



}